--- a/app/android/app/src/main/res/drawable/circle_background.xml
+++ b/app/android/app/src/main/res/drawable/circle_background.xml
@@ -1,4 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E83625" />
+    <stroke
+        android:width="2dp"
+        android:color="#3d85c6" />
+    <solid android:color="#ffffff" />
 </shape>
