--- a/app/android/app/src/main/res/layout/floating_bubble.xml
+++ b/app/android/app/src/main/res/layout/floating_bubble.xml
@@ -7,6 +7,7 @@
         android:id="@+id/bubble_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/ic_logo"
+        android:padding="12dp"
         android:background="@drawable/circle_background" />
 </FrameLayout>
